[package]
name = "node-polkadex-runtime"
version = "4.0.0"
authors = ["Polkadex OÜ  <https://polkadex.trade>"]
edition = "2021"
license = "GNU GPL v3"
homepage = "https://polkadex.trade"
repository = "https://github.com/Polkadex-Substrate/Polkadex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.1", optional = true }
static_assertions = { workspace = true }
log = { workspace = true, default-features = false }
smallvec = { workspace = true }
#pallets
#added
pallet-authorship = { default-features = false, workspace = true }
pallet-babe = { default-features = false, workspace = true }
pallet-balances = { default-features = false, workspace = true }
pallet-grandpa = { default-features = false, workspace = true }
pallet-im-online = { default-features = false, workspace = true }
pallet-offences = { default-features = false, workspace = true }
pallet-session = { default-features = false, workspace = true }
pallet-staking = { default-features = false, workspace = true }
thea-staking = { default-features = false, workspace = true }
pallet-multisig = { default-features = false, workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-sudo = { default-features = false, workspace = true }
pallet-utility = { default-features = false, workspace = true }
pallet-timestamp = { default-features = false, workspace = true }
pallet-transaction-payment = { default-features = false, workspace = true }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, workspace = true }
pallet-treasury = { default-features = false, workspace = true }
pallet-collective = { default-features = false, workspace = true }
pallet-democracy = { default-features = false, workspace = true }
pallet-elections-phragmen = { default-features = false, workspace = true }
pallet-membership = { default-features = false, workspace = true }
pallet-scheduler = { default-features = false, workspace = true }
pallet-bounties = { default-features = false, workspace = true }
pallet-preimage = { default-features = false, workspace = true }
pallet-bags-list = { default-features = false, workspace = true }
pallet-indices = { default-features = false, workspace = true }
pallet-identity = { default-features = false, workspace = true }
pallet-proxy = { default-features = false, workspace = true }
pallet-tips = { default-features = false, workspace = true }
pallet-recovery = { default-features = false, workspace = true }
pallet-election-provider-multi-phase = { default-features = false, workspace = true }
pallet-authority-discovery = { default-features = false, workspace = true }
pallet-child-bounties = { default-features = false, workspace = true }
pallet-contracts = { default-features = false, workspace = true }

#frame
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
frame-executive = { default-features = false, workspace = true }

#sp
sp-api = { default-features = false, workspace = true }
sp-offchain = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-session = { default-features = false, workspace = true }
sp-std = { default-features = false, workspace = true }
sp-transaction-pool = { default-features = false, workspace = true }
sp-version = { default-features = false, workspace = true }
sp-io = { workspace = true, default-features = false }
sp-finality-grandpa = { workspace = true, default-features = false }

#added
sp-authority-discovery = { default-features = false, workspace = true }
sp-block-builder = { default-features = false, workspace = true }
sp-consensus-babe = { default-features = false, workspace = true }
sp-core = { default-features = false, workspace = true }
sp-inherents = { default-features = false, workspace = true }
sp-staking = { default-features = false, workspace = true }
sp-npos-elections = { default-features = false, workspace = true }
frame-election-provider-support = { default-features = false, workspace = true }
pallet-randomness-collective-flip = { default-features = false, workspace = true }
pallet-assets = { default-features = false, workspace = true }
#end added

# Used for the node template"s RPCs
frame-system-rpc-runtime-api = { default-features = false, workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, workspace = true, optional = true }
frame-system-benchmarking = { default-features = false, workspace = true, optional = true }
pallet-society = { default-features = false, workspace = true, optional = true }

# ORML Pallets
orml-vesting = { workspace = true, default-features = false }

# Local Dependecies
polkadex-primitives = { workspace = true, default-features = false }
pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
asset-handler = { path = "../pallets/asset-handler", default-features = false }
chainbridge = { path ="../pallets/chainbridge", default-features = false }

# Orderbook 
pallet-ocex-lmp = {path = "../pallets/ocex", default-features = false }

# Try Runtime
frame-try-runtime = { workspace = true, optional = true, default-features = false }

pallet-asset-handler-runtime-api = { path = "../pallets/asset-handler/rpc/runtime-api", default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "log/std",
    "pallet-authorship/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-offences/std",
    "pallet-session/std",
    "pallet-staking/std",
    "thea-staking/std",
    "pallet-multisig/std",
    "pallet-sudo/std",
    "pallet-utility/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-treasury/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "pallet-membership/std",
    "pallet-scheduler/std",
    "pallet-bounties/std",
    "pallet-preimage/std",
    "pallet-bags-list/std",
    "pallet-indices/std",
    "pallet-identity/std",
    "pallet-proxy/std",
    "pallet-tips/std",
    "pallet-recovery/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-authority-discovery/std",
    "pallet-child-bounties/std",
    "pallet-contracts/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-api/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-io/std",
    "sp-finality-grandpa/std",
    "sp-authority-discovery/std",
    "sp-block-builder/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-staking/std",
    "sp-npos-elections/std",
    "frame-election-provider-support/std",
    "pallet-randomness-collective-flip/std",
    "pallet-assets/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-society/std",
    "orml-vesting/std",
    "polkadex-primitives/std",
    "pdex-migration/std",
    "asset-handler/std",
    "chainbridge/std",
    "pallet-ocex-lmp/std",
    "frame-try-runtime/std",
    "pallet-asset-handler-runtime-api/std"
]
runtime-benchmarks = [
    #theirs
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking",
	"sp-runtime/runtime-benchmarks",
    "hex-literal",
    #our
    "pallet-ocex-lmp/runtime-benchmarks",
    "asset-handler/runtime-benchmarks",
    "pdex-migration/runtime-benchmarks",
]
try-runtime = [
    "frame-executive/try-runtime",
    "frame-try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-election-provider-multi-phase/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-bounties/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-elections-phragmen/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-indices/try-runtime",
    "pallet-child-bounties/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-bags-list/try-runtime",
    "pallet-membership/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-society/try-runtime",
    "pallet-staking/try-runtime",
    "thea-staking/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-tips/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-utility/try-runtime",
    "orml-vesting/try-runtime",
    "pdex-migration/try-runtime",
]
