[package]
name = "thea-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
blst = {version = "0.3.10", default-features = false, optional=true}
frame-system = { workspace = true, default-features = false }
frame-support = { default-features = false, workspace = true }
polkadex-primitives = {workspace = true, default-features = false}
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

# For primitive structs
parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "sp-runtime-interface/std",
    "blst",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "xcm/std"
    "frame-support/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
