[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash256-std-hasher = { version = "0.15.2", default-features = false }
hex = "0.4.2"
log = "0.4"
futures = "0.3"
thiserror = "1.0.39"
chrono = "0.4.24"
parking_lot = "0.12.1"
serde = "1.0.152"
primitive-types = {version = "0.12.1", default-features = false, features = ["scale-info"]}
serde_json = "1.0.94"
# Database stuff
hash-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
memory-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master"  }
trie-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master"  }
trie-root = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master"  }
reference-trie = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master"  }
reqwest = "0.11.14"
tokio = "1.26.0"
orderbook-primitives = { path = "../../primitives/orderbook" }
bls-primitives = { path = "../../primitives/bls-primitives" }
polkadex-primitives = { path = "../../primitives/polkadex" }
rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"] }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
parity-scale-codec = { version = "3.2.2", features = ["derive"] }

sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28" }

[dev-dependencies]
mockall = "0.11.1"
testing_logger = "0.1.1"
mockall_double = "0.3.0"
