[package]
name = "orderbook"
version = "1.0.0"
edition = "2021"

[dependencies]
hash256-std-hasher = { version = "0.15.2", default-features = false }
hex = "0.4.2"
log = "0.4"
futures = "0.3"
thiserror = "1.0.39"
chrono = "0.4.24"
parking_lot = "0.12.1"
serde = "1.0.152"
serde_with = { version = "2.3.2", features = ["json"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
serde_json = "1.0.94"
blst = { version = "0.3.10", default-features = false }
# Database stuff
hash-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
memory-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
trie-db = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
trie-root = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
reference-trie = { git = "https://github.com/Polkadex-Substrate/trie.git", branch = "master" }
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
orderbook-primitives = { path = "../../primitives/orderbook" }
bls-primitives = { workspace = true }
polkadex-primitives = { path = "../../primitives/polkadex" }
rust_decimal = { git = "https://github.com/Polkadex-Substrate/rust-decimal.git", branch = "master", features = ["scale-codec"] }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
parity-scale-codec = { version = "3.2.2", features = ["derive"] }

sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[dev-dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2.5"
env_logger = "0.10.0"
mockall = "0.11.1"
testing_logger = "0.1.1"
mockall_double = "0.3.0"
orderbook-rpc = { path = "rpc" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
