[package]
name = "thea-client"
version = "1.0.0"
edition = "2021"

[dependencies]
hash256-std-hasher = { version = "0.15.2", default-features = false }
async-trait = "0.1.68"
hex = "0.4.2"
log = "0.4"
futures = "0.3"
thiserror = "1.0.39"
chrono = "0.4.24"
parking_lot = "0.12.1"
serde = "1.0.152"
serde_json = "1.0.94"
tokio = "1.26.0"
tokio-stream = { version = "0.1.12", features = ["time"] }
thea-primitives = { path = "../../primitives/thea" }
bls-primitives = { workspace = true }
polkadex-primitives = { path = "../../primitives/polkadex" }
subxt = { git = "https://github.com/Polkadex-Substrate/subxt.git", branch = "polkadot-v0.9.37", features = ["substrate-compat"] }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
parity-scale-codec = { version = "3.2.2", features = ["derive"] }
blst = { version = "0.3.10", default-features = false }


sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[dev-dependencies]
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
mockall = "0.11.1"
testing_logger = "0.1.1"
mockall_double = "0.3.0"
serial_test = "2.0.0"
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
tempfile = "3.5.0"
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
