[package]
name = "uniswap_v2"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"
resolver = "2"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = [
    "derive",
], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "0.6.0", default-features = false, features = [
    "derive",
], optional = false }
sp-core = { tag = "3.0.0-rc3", default-features = false }
sp-runtime = { tag = "3.0.0-rc3", default-features = false }

err-derive = { version = "0.3.0", default-features = false }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

[lib]
name = "uniswap_v2"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "sp-runtime/std",
    "sp-core/std",
]
ink-as-dependency = []
