[package]
name = "uniswap_v2"
version = "0.1.0"
authors = ["Frank Li <frank@polkadex.trade>"]
edition = "2018"

[profile.release]
overflow-checks = false

[dependencies]
ink_primitives = { version = "=3.0.0-rc3", default-features = false }
ink_metadata = { version = "=3.0.0-rc3", default-features = false, features = [
    "derive",
], optional = true }
ink_env = { version = "=3.0.0-rc3", default-features = false }
ink_storage = { version = "=3.0.0-rc3", default-features = false }
ink_lang = { version = "=3.0.0-rc3", default-features = false }
ink_prelude = { version = "=3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = [
    "derive",
] }
scale-info = { version = "0.6.0", default-features = false, features = [
    "derive",
], optional = false }

err-derive = { version = "0.3.0", default-features = false }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"
primitive-types = { version = "0.10.1", default-features = false }
num-traits = { version = "0.2.14", default-features = false }

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"

[lib]
name = "uniswap_v2"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
]
ink-as-dependency = []
